# shortURL

./: .gitignore  README.md  app.py  makefile  pyproject.toml
instance/: app.db
migrations/versions/: 95a67a0ca272_initial_migration.py
models/: URL.py
static/: app.js
templates/layout/: base.html
templates/url/: _generateURL.html  index.html
