[tool.poetry]
name = "generate-short-url"
version = "0.1.0"
description = ""
authors = ["toshi <toshimichi0809@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"
flask = "^3.0.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
commitizen = "^3.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
